# scrinium

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.cursor/backlog/: each-step-log.mdc  significant-changes-summary.mdc
scrinium/: __init__.py  __main__.py  convert.py
scrinium/templates/: index.html
