[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "scrinium"
version = "0.1.0"
description = "RAG Chat over your documents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "chromadb>=0.5",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.1",
    "aiofiles>=24.1",
    "docling>=2.0",
]

[project.scripts]
scrinium = "scrinium.__main__:main"

[tool.setuptools.packages.find]
include = ["scrinium*"]
